cmake_minimum_required(VERSION 3.29)
project(CS512)

set(CMAKE_CXX_STANDARD 20)

add_executable(CS512
        #        lab_2_search/linear_search/implementation.cpp
        #        lab_2_search/binary_search/loop_implementation.cpp
        #        lab_2_search/binary_search/recursive_implementation.cpp
        lab_3_sorting/bubble_sort.cpp
)
